<resources>
    <string name="app_name">Firebase-chat-kotlin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="email_id">Email ID</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="text_forgot_password">Forgot\nPassword?</string>
    <string name="or">or</string>
    <string name="login_with_google">Login with Google</string>
    <string name="new_to_logistics_register">New to Logistics? <b><font color="#FF9800">Register</font></b></string>
    <string name="sign_up">Sign up</string>
    <string name="full_name">Full Name</string>
    <string name="already_account">Already have account? <b><font color="#FF9800">Login</font></b></string>
    <string name="key_continue">Continue</string>

    <string name="alert_enter_email">Enter email</string>
    <string name="alert_enter_valid_email">Enter Valid Email</string>
    <string name="alert_enter_name">Enter Name</string>
    <string name="alert_enter_password">Enter Password</string>
    <string name="alert_enter_valid_password">Password should be greater than 6 Character</string>
    <string name="register_successfully">Register Successfully</string>
    <string name="login_successfully">Login Successfully</string>
    <string name="user_does_not_exist">User does not exist</string>
    <string name="forgot_description">Don\'t worry! it happens. Please enter the address associated with your account.</string>
    <string name="submit">Submit</string>
    <string name="message">Message</string>
    <string name="chat">Chat</string>
    <string name="add_friends">Add Friends</string>
    <string name="add">Add</string>
    <string name="you_don_t_have_any_friends_to_chatting_please_add_friend">You don\'t have any friends to chatting, Please add friend</string>
    <string name="home">Home</string>
    <string name="navigation_drawer_open">Drawer open</string>
    <string name="navigation_drawer_close">Drawer close</string>
    <string name="invitations">Invitations</string>
    <string name="log_out">Log out</string>
    <string name="notification">Notification</string>
    <string name="yesterday">Yesterday</string>
    <string name="online">Online</string>
    <string name="alert_typing">Typing...</string>
    <string name="accept">Accept</string>
    <string name="denied">Denied</string>
    <string name="no_user_found">No user found!</string>
    <string name="no_invitation_found">You don\'t have any invitation.</string>

    <string name="last_seen">last Seen</string>
    <string name="last_seen_today">last Seen today</string>
    <string name="last_seen_yesterday">last Seen yesterday</string>
</resources>