<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.valentine.photoframes.view.Home">

    <group android:id="@+id/home">
        <item
            android:id="@+id/menu_home"
            android:visible="false"
            android:icon="@drawable/icone_menu_home"
            android:title="@string/home" />
    </group>

    <group android:id="@+id/invitation">
        <item
            android:id="@+id/menu_invitation"
            android:icon="@drawable/ic_invete_icon"
            android:title="@string/invitations" />
    </group>

    <group android:id="@+id/addFriend">
        <item
            android:id="@+id/menu_add_friend"
            android:icon="@drawable/ic_add_friend_icon"
            android:title="@string/add_friends" />
    </group>

    <group android:id="@+id/notification">
        <item
            android:id="@+id/menu_notification"
            android:icon="@drawable/ic_notification"
            android:title="@string/notification" />
    </group>

    <group android:id="@+id/logout">
        <item
            android:id="@+id/action_logout"
            android:icon="@drawable/ic_log_out_icon"
            android:title="@string/log_out" />
    </group>

</menu>
