<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="forgotPassword"
            type="com.firebase.chat.ui.fragment.ForgotPassword" />

        <variable
            name="viewModel"
            type="com.firebase.chat.ui.viewmodel.ForgotPasswordViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.ForgotPassword">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sw_14dp"
            android:elevation="@dimen/sw_2dp"
            android:onClick="@{ () -> viewModel.navigateBack()}"
            android:layout_marginStart="@dimen/sw_10dp"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:src="@drawable/ic_back_arrow"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivForgot"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:src="@drawable/login_image"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHeight_percent="0.4" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvForgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/sw_20sp"
            android:layout_marginTop="@dimen/sw_6dp"
            android:text="@string/text_forgot_password"
            android:textSize="@dimen/sw_22sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivForgot" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvForgotDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/sw_20sp"
            android:layout_marginTop="@dimen/sw_10dp"
            android:text="@string/forgot_description"
            android:textSize="@dimen/sw_12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvForgot" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etForgotEmailLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/sw_20sp"
            android:layout_marginTop="@dimen/sw_20dp"
            app:layout_constraintTop_toBottomOf="@+id/tvForgotDescription">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etForgotEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="@dimen/sw_10dp"
                android:text="@={viewModel.forgotEmail}"
                android:hint="@string/email_id"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnForgot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/sw_20dp"
            android:layout_marginTop="@dimen/sw_20dp"
            android:paddingVertical="@dimen/sw_10dp"
            android:text="@string/submit"
            android:onClick="@{ (v) -> forgotPassword.onForgetClick()}"
            android:textColor="@color/white"
            android:textSize="@dimen/sw_14sp"
            app:cornerRadius="@dimen/sw_6dp"
            app:layout_constraintTop_toBottomOf="@+id/etForgotEmailLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>